tests/harness/errors/064_has_string_not_sym.eu
# Mistake: using has("key") with a string instead of :key (symbol)
data: { x: 1, y: 2, z: 3 }
check: data has("x")
